--- a/j17/Dockerfile
+++ b/j17/Dockerfile
@@ -19,5 +19,5 @@ ENV     USER=container HOME=/home/container
 WORKDIR /home/container
 
 # COPY        ./../entrypoint.sh /entrypoint.sh
-ENTRYPOINT  ["sh", "/entrypoint.sh"]
+# ENTRYPOINT  ["sh", "/entrypoint.sh"]
 CMD         [ "/bin/bash", "/entrypoint.sh" ]
