--- a/j17/Dockerfile
+++ b/j17/Dockerfile
@@ -18,6 +18,6 @@ USER    container
 ENV     USER=container HOME=/home/container
 WORKDIR /home/container
 
-COPY        ./entrypoint.sh /entrypoint.sh
+COPY /entrypoint.sh ./entrypoint.sh
 # ENTRYPOINT  ["sh", "/entrypoint.sh"]
-CMD         [ "/bin/bash", "/entrypoint.sh" ]
+CMD ["/bin/bash", "/entrypoint.sh"]
